<resources>
    <string name="app_name">STX Next AR</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="start">Start</string>
    <string name="stx_logo">Stx Logo</string>
    <string name="dinosaur">Dinosaur</string>
    <string name="cat">Cat</string>
    <string name="tutorial">Tutorial</string>
    <string name="credits">Credits</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="development_team">Development</string>
    <string name="models">Models</string>
    <string name="dinosaur_model">Dinosaur model</string>

    <string name="welcome">WELCOME</string>
    <string name="marker">AR MARKER</string>
    <string name="usage">HOW TO</string>
    <string name="finish">LET\'S START</string>


    <string name="start_hint">Welcome to STX Augmented Reality Application. This tutorial will guide you through the process of setting up the application.</string>
    <string name="marker_hint">Please visit a page &lt;a href=\"https://nofluffjobs.com/upload/STX_Next_20150129_164933.png\">http://stxnext.pl/ar/logo&lt;/a> and print STX LOGO.</string>
    <string name="usage_hint">To display AR object point your phone\'s camera at STX Logo.</string>
    <string name="finish_hint">Now it is finished. Please press a start button to run STX AR Application.</string>
    <string name="choose_object">Choose object:</string>
    <string name="skip">SKIP</string>
    <string name="start_application">Start</string>

</resources>
