<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white_little_greyed"
              android:orientation="vertical"
              android:paddingLeft="35dp"
              android:paddingRight="35dp">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-30dp"
                android:src="@drawable/stxnext"
                />

            <TextView
                android:id="@+id/choose_object"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:gravity="center"
                android:text="@string/choose_object"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/stx_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_grey_button"
                android:padding="12dp"
                android:text="@string/stx_logo"
                android:textAllCaps="true"
                android:textSize="21sp"/>

            <Button
                android:id="@+id/dinosaur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_grey_button"
                android:padding="12dp"
                android:text="@string/dinosaur"
                android:textAllCaps="true"
                android:textSize="21sp"/>

            <Button
                android:id="@+id/cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_grey_button"
                android:padding="12dp"
                android:text="@string/cat"
                android:textAllCaps="true"
                android:textSize="21sp"/>

            <Button
                android:id="@+id/tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/selector_grey_button"
                android:padding="12dp"
                android:text="@string/tutorial"
                android:textAllCaps="true"
                android:textSize="21sp"/>

            <Button
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_grey_button"
                android:padding="12dp"
                android:text="@string/close"
                android:textAllCaps="true"
                android:textSize="21sp"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>